--- a/style.css
+++ b/style.css
@@ -236,11 +236,9 @@ body {
     text-align: center;
 }
 
-
 /* ---------------------------------------------------------------------------------------- */
 /********************************** Fav Menu Property ***************************************/
 /* ---------------------------------------------------------------------------------------- */
-
 
 #fav {
     display: flex;
@@ -450,6 +448,7 @@ body {
 /* ---------------------------------------------------------------------------------------- */
 /********************************** Meal Card Property **************************************/
 /* ---------------------------------------------------------------------------------------- */
+/*************************** Designed And Re Developed By Rajesh Choudhary ******************/
 
 #cards-holder {
     width: 100%;
